--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
-    "nanoid": "^4.0.1"
+    "nanoid": "^4.0.1",
+    "pg": "^8.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
